--- a/res/layout/sample_cam.xml
+++ b/res/layout/sample_cam.xml
@@ -1,7 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal">
-	<com.wikitude.architect.ArchitectView android:id="@+id/architectView" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
+    android:orientation="vertical" >
+    <RelativeLayout 
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="32dip"
+        android:layout_gravity="center_horizontal"
+        >
+		    <EditText
+		        android:id="@+id/editText1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="32dip"
+		        android:ems="10"
+				android:layout_centerInParent="true"
+
+		        >
+		    </EditText>
+
+		    <Button
+	        android:id="@+id/btn_start_b"
+	        android:layout_height="32dip"
+	        android:layout_width="wrap_content"
+	        android:text="@string/btn_start_b_label"
+	       
+	        />
+<!--  android:layout_alignRight="true" -->
+    </RelativeLayout>
+    
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="32dip"
+        android:gravity="center_horizontal"
+        android:text="@string/app_name" />
+
+	<com.wikitude.architect.ArchitectView
+	    android:id="@+id/architectView"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content" />
+	
 </LinearLayout>
