--- a/res/layout/prueba.xml
+++ b/res/layout/prueba.xml
@@ -25,7 +25,8 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text="@string/send" />
+        android:text="@string/SpeechToText"
+        android:onClick="onClickTextToSpeech" />
 
 	<com.wikitude.architect.ArchitectView
 	    android:id="@+id/architectView"
